[Add] js_redirect

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -98,7 +98,7 @@
   background: #fff;
   // border: 1px solid #000;
   border-top: none;
-  height: 700px;
+  // height: 700px;
 }
 
 #tab-contents p {
