--- a/app/views/public/users/show.js.erb
+++ b/app/views/public/users/show.js.erb
@@ -1,1 +1,1 @@
-$("#calendar").html("<%= j(render("public/users/calendar", announcements: @announcements)) %>");
+$("#calendar").html("<%= j(render("public/users/calendar", announcements: @announcements, user: @user)) %>");
