--- a/app/views/public/announcements/edit.html.erb
+++ b/app/views/public/announcements/edit.html.erb
@@ -3,6 +3,7 @@
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
     <h2>朝活宣言編集</h2>
     <%= form_with model: [:public, @user, @announcement], url: user_announcement_path(@announcement.user, @announcement), method: :patch, local: true do |f| %>
+    <!--<%#= form_with model: [:public, @user, @announcement], url: user_announcement_path(@announcement.user, @announcement), method: :patch, local: false do |f| %>-->
       <%= render 'layouts/errors', obj: @announcement %>
       <div class="form-group">
         <%= f.label :announcement, "朝活宣言" %>
