--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,11 @@
   box-sizing: border-box;
 }
 
+// a:link { color: #000000	; }
+// a:visited { color: #000000; }
+// a:hover { color: #000000; }
+// a:active { color: #000000; }
+
 .n-circle {
   position: absolute;
   padding-left: 1rem;
