--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -13,7 +13,7 @@
         </tr>
       </table>
 
-      <div class="card" style="max-width: 75rem;">
+      <div class="card shadow-lg" style="max-width: 75rem;">
         <%= image_tag @post.get_post_image(900, 900), class: "card-image-top" %>
         <div class="card-body">
           <h4 class="card-title">
