--- a/app/views/public/searches/_genre_form.html.erb
+++ b/app/views/public/searches/_genre_form.html.erb
@@ -3,6 +3,6 @@
     <%= f.text_field :content %>
     <%= f.hidden_field :model, :value => "genre" %>
     <%= f.hidden_field :method, :value => "perfect" %>
-    <%= f.submit 'タグ検索' %>
+    <%= f.submit '投稿ジャンル検索' %>
   <% end %>
 <% end %>
