--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
 <%#= stylesheet_link_tag "application", :media => "all" %>
-<header class="shadow-sm bg-light">
+<header class="shadow-sm bg-white sticky-top">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand p-3" href="/"><%#= image_tag('') %>ロゴ</a>
+      <a class="navbar-brand" href="/"><img src="/assets/logo2.png" alt="", width="150", height="80"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
