--- a/app/views/public/announcements/_announcement.html.erb
+++ b/app/views/public/announcements/_announcement.html.erb
@@ -1,17 +1,18 @@
+<!--tab=2(最新の一つの方)-->
 <tbody>
   <% announcements.each do |announcement| %>
   <tr>
     <td>
       <li style="list-style: none;">
         <% if announcement.user_id == current_user.id %>
-          今日の朝活は、<strong><%= link_to announcement.announcement, edit_user_announcement_path(announcement.user, announcement.id) %></strong>です! <br><宣言日:<%= announcement.updated_at.strftime('%Y/%m/%d') %>>
+          今日の朝活は、<strong><%= link_to announcement.announcement, edit_user_announcement_path(announcement.user, announcement.id) %></strong>です! <br><宣言日:<%= announcement.created_at.strftime('%Y/%m/%d') %>>
         <% else %>
-          今日の朝活は、<strong><%= announcement.announcement %></strong>です! <br><宣言日:<%= announcement.updated_at.strftime('%Y/%m/%d') %>>
+          今日の朝活は、<strong><%= announcement.announcement %></strong>です! <br><宣言日:<%= announcement.created_at.strftime('%Y/%m/%d') %>>
         <% end %>
         <% if announcement.achieve_status == "nonachieve" %>
-          <span class="btn btn-outline-danger"><%= announcement.achieve_status_i18n %></span>
+          <span class="text-danger">(<%= announcement.achieve_status_i18n %>)</span>
         <% else %>
-          <span class="btn btn-outline-success"><%= announcement.achieve_status_i18n %></span>
+          <span class="text-success">(<%= announcement.achieve_status_i18n %>済み)</span>
         <% end %>
       </li>
     </td>
