--- a/app/views/public/groups/index.html.erb
+++ b/app/views/public/groups/index.html.erb
@@ -6,7 +6,7 @@
       <h2 class="mt-3"><%= @user.name %>さんの参加中コミュニティ</h2>
       <%= render 'public/users/user_groups', user: @user %>
     </div>
-    <div class='col-md-7 offset-md-1'>
+    <div class='col-md-8'>
       <div><%= link_to "コミュニティを作成", new_group_path %> | <%= link_to "コミュニティ一覧", groups_path %></div>
       <h2>コミュニティ一覧</h2>
       <%= render 'index', groups: @groups %>
