--- a/app/views/public/groups/show.html.erb
+++ b/app/views/public/groups/show.html.erb
@@ -1,8 +1,8 @@
-<div class='container'>
+<div class='container mb-5'>
   <div class='row'>
     <div class='col-md-8 offset-md-1'>
   		<h2>コミュニティ詳細</h2>
-      <div class="card", style="max-width: 50rem;", id="group_<%= @group.id %>">
+      <div class="card shadow-lg", style="max-width: 50rem;", id="group_<%= @group.id %>">
         <%= image_tag @group.get_image(900, 900), class: "card-image-top" %>
         <div class="card-body">
           <h4 class="card-title"><%= @group.name %></h4>
@@ -10,17 +10,21 @@
           <% if @group.owner_id == current_user.id %>
             <%= link_to "編集", edit_group_path(@group.id), class: "btn btn-outline-success" %>
             <!--ここにメール作成ボタンも追加-->
+            <%= link_to '朝活を開催', group_new_mail_path(@group), class: "btn btn-outline-warning" %>
           <% end %>
+          <div class="join-btn">
+            <%= render 'join_btn', group: @group %>
+          </div>
         </div>
         <ul class="list-group list-group-flush group-member">
           <%= render 'member', group: @group %>
         </ul>
-        <div class="card-body join-btn">
-          <%= render 'join_btn', group: @group %>
-          <% if @group.owner_id == current_user.id %>
-            <%= link_to '朝活を開催', group_new_mail_path(@group) %>
-          <% end %>
-        </div>
+        <!--<div class="card-body join-btn">-->
+        <!--  <%#= render 'join_btn', group: @group %>-->
+        <!--  <%# if @group.owner_id == current_user.id %>-->
+        <!--    <%#= link_to '朝活を開催', group_new_mail_path(@group) %>-->
+        <!--  <%# end %>-->
+        <!--</div>-->
       </div>
     </div>
   </div>
