--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -1,3 +1,9 @@
+<div class="container">
+  <div class="row justify-content-end mb-1">
+    <%#= render 'public/searches/form' %>
+    <%= render 'public/searches/genre_form' %>
+  </div>
+</div>
 <div class="card-deck">
   <!--countの初期値0-->
   <% count = 0 %>
@@ -36,6 +42,20 @@
   <% end %>
 </div>
 <%= paginate posts %>
+<style>
+  .pagination {
+    text-align: center;
+    width: 100%;
+    margin: 20px auto;
+    max-width: 200px;
+  }
+  .page-item.active .page-link {
+    z-index: 3;
+    color: #fff;
+    background-color: #FFFF66;
+    border-color: #FFFF00;
+}
+</style>
 
 
 <!--<%# posts.each do |post| %>-->
