[Add]guest_login

--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -42,6 +42,7 @@
   <% end %>
 </div>
 <%= paginate posts %>
+
 <style>
   .pagination {
     text-align: center;
@@ -51,7 +52,7 @@
   }
   .page-item.active .page-link {
     z-index: 3;
-    color: #fff;
+    color: #000;
     background-color: #FFFF66;
     border-color: #FFFF00;
 }
