--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -76,7 +76,7 @@
         </li>
 
         <li class="nav-item">
-          <%= link_to "ゲストログイン", new_user_session_path, class: 'nav-link text-dark' %>
+          <%= link_to "ゲストログイン(閲覧用)", users_guest_sign_in_path, method: :post, class: 'nav-link text-dark' %>
         </li>
 
         <li class="nav-item">
