--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,9 +1,9 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-4'>
-      <h2><%= @user.name %>さんの会員情報</h2>
+      <h2><%= @user.name %>さんの<br>会員情報</h2>
       <%= render 'public/users/info', user: @user %>
-      <h2 class="mt-3"><%= @user.name %>さんの参加中コミュニティ</h2>
+      <h2 class="mt-3"><%= @user.name %>さんの<br>参加中コミュニティ</h2>
       <%= render 'public/users/user_groups', user: @user %>
     </div>
     <div class='col-md-8'>
