--- a/app/views/public/users/_info.html.erb
+++ b/app/views/public/users/_info.html.erb
@@ -38,8 +38,10 @@
 <!--<%# end %>-->
 
 <div class='row d-flex align-items-center justify-content-center'>
-  <%= link_to edit_user_path(user.id), class: "btn btn-outline-warning mr-2" do %>
-    <i class="fa-solid fa-user-pen"></i>
+  <% if user.name != "guestuser" %>
+    <%= link_to edit_user_path(user.id), class: "btn btn-outline-warning mr-2" do %>
+      <i class="fa-solid fa-user-pen"></i>
+    <% end %>
   <% end %>
   <%= link_to new_group_path, class: "btn btn-outline-warning mr-2" do %>
     <i class="fa-solid fa-people-group"></i>
