--- a/app/views/public/announcements/_announcetab.html.erb
+++ b/app/views/public/announcements/_announcetab.html.erb
@@ -22,3 +22,25 @@
     </div>
     <% end %>
   </div>
+
+  <style>
+    nav ul.pagination {
+      display: none;
+    }
+
+    .pagination {
+      text-align: center;
+      width: 100%;
+      margin: 20px auto;
+      max-width: 200px;
+    }
+    .page-item.active .page-link {
+      z-index: 3;
+      color: #000;
+      background-color: #FFFF66;
+      border-color: #FFFF00;
+    }
+  </style>
+
+  <%= paginate announcements, :param_name => 'offset_announce_page' %>
+
