--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -40,7 +40,9 @@
               </div>
           </div>
           <div id="tab3" class="tab">
+            <div class="scroll-list jscroll">
             <%= render 'public/announcements/announcetab', announcements: @announcements_offset1 %>
+            </div>
           </div>
         </div>
       </div>
