--- a/app/views/public/users/_user_groups.html.erb
+++ b/app/views/public/users/_user_groups.html.erb
@@ -7,8 +7,9 @@
       <th colspan="3"></th>
     </tr>
   </thead>
+  <% @user_groups = user.groups.page(params[:user_groups_page]).per(5) %>
   <tbody>
-    <% user.groups.each do |group| %>
+    <% @user_groups.each do |group| %>
       <tr>
         <td><%= image_tag group.get_image(50, 50), class:"rounded-circle"; %></td>
         <td><%= link_to group.name, group_path(group.id) %></td>
@@ -17,3 +18,21 @@
     <% end %>
   </tbody>
 </table>
+
+<style>
+  .pagination {
+    text-align: center;
+    width: 100%;
+    margin: 20px auto;
+    max-width: 70px;
+  }
+  .page-item.active .page-link {
+    z-index: 3;
+    color: #000;
+    background-color: #FFFF66;
+    border-color: #FFFF00;
+  }
+</style>
+
+<%= paginate @user_groups, :param_name => 'user_groups_page' %>
+
