--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -42,7 +42,7 @@
   <% end %>
 </div>
 
-<%= paginate posts %>
+<%= paginate posts, :param_name => 'posts_page', remote: true %>
 
 <style>
   .pagination {
