--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -4,7 +4,9 @@
       <h2><%= @user.name %>さんの<br>会員情報</h2>
       <%= render 'public/users/info', user: @user %>
       <h2 class="mt-3"><%= @user.name %>さんの<br>参加中コミュニティ</h2>
-      <%= render 'public/users/user_groups', user: @user %>
+      <div id="paginate-posts">
+        <%= render 'public/users/user_groups', user_groups: @user_groups %>
+      </div>
     </div>
     <div class='col-md-8'>
       <h2>投稿一覧</h2>
