--- a/app/views/public/users/_user_groups.html.erb
+++ b/app/views/public/users/_user_groups.html.erb
@@ -7,9 +7,9 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-  <% @user_groups = user.groups.page(params[:user_groups_page]).per(5) %>
+  <%# @user_groups = user.groups.page(params[:user_groups_page]).per(3) %>
   <tbody>
-    <% @user_groups.each do |group| %>
+    <% user_groups.each do |group| %>
       <tr>
         <td><%= image_tag group.get_image(50, 50), class:"rounded-circle"; %></td>
         <td><%= link_to group.name, group_path(group.id) %></td>
@@ -34,5 +34,6 @@
   }
 </style>
 
-<%= paginate @user_groups, :param_name => 'user_groups_page' %>
+
+<%= paginate user_groups, :param_name => 'user_groups_page', remote: true %>
 
