--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -1,15 +1,12 @@
-<!--<div class="text-right mr-5">-->
-<!--  <%#= link_to new_post_path, class: 'btn btn-outline-warning' do %>-->
-<!--    <i class="fa-solid fa-pen-to-square"></i>-->
-<!--  <%# end %>-->
-<!--</div>-->
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-4'>
       <h2><%= @user.name %>さんの会員情報</h2>
       <%= render 'info', user: @user %>
       <h2 class="mt-3"><%= @user.name %>さんの</br>参加中コミュニティ</h2>
-      <%= render 'user_groups', user: @user %>
+      <div id="paginate-favorites">
+        <%= render 'user_groups', user_groups: @user_groups %>
+      </div>
     </div>
     <div class='col-md-8'>
       <!--<div class="border rounded-circle p-2 text-center">-->
