--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -4,7 +4,9 @@
       <h2><%= @user.name %>さんの<br>会員情報</h2>
       <%= render 'info', user: @user %>
       <h2 class="mt-3"><%= @user.name %>さんの<br>参加中コミュニティ</h2>
-      <%= render 'public/users/user_groups', user: @user %>
+      <div id="paginate-users">
+        <%= render 'public/users/user_groups', user_groups: @user_groups %>
+      </div>
     </div>
     <div class='col-md-8'>
       <div><%= link_to "コミュニティを作成", new_group_path %> | <%= link_to "コミュニティ一覧", groups_path %></div>
