--- a/app/views/public/post_comments/_form.html.erb
+++ b/app/views/public/post_comments/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_with model: [post, post_comment], local: false do |f| %>
-  <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに", class: "w-100" %>
+  <%= f.text_area :comment, autofocus: true, rows: '5', placeholder: "コメントをここに", class: "w-100" %>
   <%= f.submit "送信する", class: "btn btn-outline-warning" %>
 <% end %>
