--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -10,7 +10,9 @@
     </div>
     <div class='col-md-8'>
       <h2>投稿一覧</h2>
-      <%= render 'index', posts: @posts, class: "mb-3" %>
+      <div id="index-ajax">
+        <%= render 'public/posts/index', posts: @posts, class: "mb-3" %>
+      </div>
     </div>
   </div>
 </div>
