--- a/app/views/public/posts/index.js.erb
+++ b/app/views/public/posts/index.js.erb
@@ -1,1 +1,2 @@
 $('#paginate-posts').html("<%= escape_javascript(render 'public/users/user_groups', user_groups: @user_groups) %>");
+$('#index-ajax').html("<%= escape_javascript(render 'public/posts/index', posts: @posts) %>");
