--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -9,8 +9,12 @@
       </div>
     </div>
     <div class='col-md-8'>
-      <div><%= link_to "コミュニティを作成", new_group_path %> | <%= link_to "コミュニティ一覧", groups_path %></div>
-      <h2>会員一覧</h2>
+      <h2>
+        会員一覧
+        <%= link_to new_group_path, class: "btn btn-outline-warning ml-5" do %>
+          <i class="fa-solid fa-people-group"></i>
+        <% end %>
+      </h2>
       <%= render 'index', users: @users %>
     </div>
   </div>
