--- a/app/views/public/favorites/_btn.html.erb
+++ b/app/views/public/favorites/_btn.html.erb
@@ -1,11 +1,11 @@
 <% if post.favorited_by?(current_user) %>
   <%= link_to post_favorites_path(post.id), method: :delete, remote: true do %>
-    <i class="fas fa-heart" aria-hidden="true" style="color: red;"></i>
+    <i class="fas fa-heart favorite" aria-hidden="true" style="color: red;"></i>
     <%= post.favorites.count %> いいね
   <% end %>
 <% else %>
   <%= link_to post_favorites_path(post.id), method: :post, remote: true do %>
-    <i class="fas fa-heart" aria-hidden="true"></i>
+    <i class="fas fa-heart nonfavorite" aria-hidden="true"></i>
     <%= post.favorites.count %> いいね
   <% end %>
 <% end %>
