--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -4,7 +4,7 @@
       <div class="card text-center m-5 shadow-sm" style="width: 18rem;">
         <div class="card-body text-center">
 
-          <h2>Sign up</h2>
+          <h2>新規登録</h2>
 
             <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
               <%= render "public/shared/error_messages", resource: resource %>
@@ -44,3 +44,9 @@
     </div>
   </div>
 </div>
+
+<!--<style>-->
+<!--  .card {-->
+<!--    background-color: #FFFFCC;-->
+<!--  }-->
+<!--</style>-->
