--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,3 +119,42 @@
 .fa-trophy {
   color: #FFD700;
 }
+
+#menu span {
+  // 基準位置
+  position: relative;
+}
+
+.arrow_box {
+  display: none;
+  // 相対位置
+  position: absolute;
+  // 基準のspan一つを100%として、どれくらい下にずらすか
+  top: 250%;
+  left: -20%;
+  padding: 16px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  background: #FFCC00;
+  color: #000;
+  // 改行をなくしてやると、横幅を持つようになる
+  white-space: nowrap;
+  // width: 150px;
+}
+
+.arrow_box:after {
+  position: absolute;
+  bottom: 100%;
+  left: 20%;
+  width: 0;
+  height: 0;
+  margin-left: -10px;
+  border: solid transparent;
+  border-color: rgba(51, 51, 51, 0);
+  border-bottom-color: #FFCC00;
+  // border-bottom-color: #333;
+  border-width: 10px;
+  pointer-events: none;
+  content: " ";
+}
