--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,14 +6,14 @@
           <%#= image_tag('') %>
         </div>
         <div class="col-md-8">
-          <h6 class="text-white mt-2 mb-3">Link</h6>
+          <h6 class="text-white mt-2 mb-3">Copyright © 朝サポ Inc. All Rights Reserved.</h6>
           <ul class="p-0 list-unstyled">
             <li>
-              <a href="" title="About" class="text-white-50">会社概要</a>
+              <a href="#" title="About" class="text-white-50">トップに戻る</a>
             </li>
-            <li>
-              <a href="" title="License informations" class="text-white-50">プライバシーポリシー</a>
-            </li>
+            <!--<li>-->
+            <!--  <a href="" title="License informations" class="text-white-50">プライバシーポリシー</a>-->
+            <!--</li>-->
           </ul>
         </div>
       </div>
