[Add] mail_layout

--- a/app/views/contact_mailer/send_mail.html.erb
+++ b/app/views/contact_mailer/send_mail.html.erb
@@ -1,10 +1,11 @@
+<p>いつもお世話になっております。</p>
+<p>朝活イベントが開催されるようです。</p>
+
 ===============================
-  <%= @mail_title %>
-  ===============================
-  <p>皆様</p>
+<h3><%= @mail_title %></h3>
+===============================
 
-  <p>グループオーナーからイベントの通知です。</p>
+<h3><%= @mail_content %></h3>
 
-  <%= @mail_content %>
-
-  <p>今後とも よろしくお願いいたします。</p>
+<p>今後とも よろしくお願いいたします。</p>
+<h2>~朝活で日本を元気に~</h2>
