--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -131,7 +131,7 @@
   position: absolute;
   // 基準のspan一つを100%として、どれくらい下にずらすか
   top: 250%;
-  left: -20%;
+  left: -70%;
   padding: 16px;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
@@ -140,20 +140,19 @@
   color: #000;
   // 改行をなくしてやると、横幅を持つようになる
   white-space: nowrap;
-  // width: 150px;
+  z-index: 2;
 }
 
 .arrow_box:after {
   position: absolute;
   bottom: 100%;
-  left: 20%;
+  left: 50%;
   width: 0;
   height: 0;
   margin-left: -10px;
   border: solid transparent;
   border-color: rgba(51, 51, 51, 0);
   border-bottom-color: #FFCC00;
-  // border-bottom-color: #333;
   border-width: 10px;
   pointer-events: none;
   content: " ";
