--- a/app/views/public/groups/index.html.erb
+++ b/app/views/public/groups/index.html.erb
@@ -11,9 +11,9 @@
     <div class='col-md-8'>
       <h2>
         コミュニティ一覧
-        <%= link_to new_group_path, class: "btn btn-outline-warning ml-5" do %>
-          <i class="fa-solid fa-people-group"></i>
-        <% end %>
+        <!--<%#= link_to new_group_path, class: "btn btn-outline-warning ml-5" do %>-->
+        <!--  <i class="fa-solid fa-people-group"></i>-->
+        <!--<%# end %>-->
       </h2>
       <%= render 'index', groups: @groups %>
     </div>
