--- a/app/views/public/users/_index.html.erb
+++ b/app/views/public/users/_index.html.erb
@@ -29,7 +29,7 @@
           <%= render "public/relationships/btn", user: user %>
         </td>
         <td>
-          <%= link_to "Show", user_path(user.id) %>
+          <%= link_to "Show", user_path(user.id), class: 'btn btn-outline-warning' %>
         </td>
       </tr>
     <% end %>
