--- a/app/views/public/users/_info.html.erb
+++ b/app/views/public/users/_info.html.erb
@@ -41,10 +41,10 @@
 
 <div class='row d-flex align-items-center justify-content-center'>
  <div id="menu">
-   <span class="mr-3">
+   <span class="mr-4">
     <% if user.name != "guestuser" %>
      <span class="user-edit-btn">
-      <%= link_to edit_user_path(user.id), class: "btn btn-outline-warning" do %>
+      <%= link_to edit_user_path(user.id), class: "btn btn-lg btn-outline-warning" do %>
         <i class="fa-solid fa-user-pen"></i>
       <% end %>
      </span>
@@ -52,32 +52,32 @@
     <% end %>
    </span>
 
-  <span class="mr-3">
+  <span class="mr-4">
     <span class="new-group-btn">
-      <%= link_to new_group_path, class: "btn btn-outline-warning" do %>
+      <%= link_to new_group_path, class: "btn btn-lg btn-outline-warning" do %>
         <i class="fa-solid fa-people-group"></i>
       <% end %>
     </span>
-    <p class="arrow_box">ふきだし1</p>
+    <p class="arrow_box">新規コミュニテイ作成</p>
   </span>
 
-  <span class="mr-3">
+  <span class="mr-4">
     <span class="new-post-btn">
-      <%= link_to new_post_path, class: 'btn btn-outline-warning' do %>
+      <%= link_to new_post_path, class: 'btn btn-lg btn-outline-warning' do %>
         <i class="fa-solid fa-pen-to-square"></i>
       <% end %>
     </span>
-    <p class="arrow_box">ふきだし1</p>
+    <p class="arrow_box">新規投稿</p>
   </span>
 
-  <span class="mr-3">
+  <span class="mr-4">
     <span class="favorite-post-btn">
-      <%= link_to favorites_user_path(user), class: 'btn btn-outline-warning' do %>
+      <%= link_to favorites_user_path(user), class: 'btn btn-lg btn-outline-warning' do %>
         <!--<i class="fas fa-heart" aria-hidden="true" style="color: red;"></i>-->
         <i class="fa-solid fa-heart-circle-check" aria-hidden="true" style="color: red;"></i>
       <% end %>
     </span>
-    <p class="arrow_box">ふきだし1</p>
+    <p class="arrow_box"><%= user.name %>さんが<br>いいねした投稿</p>
   </span>
 </div>
 </div>
