--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -157,3 +157,11 @@
   pointer-events: none;
   content: " ";
 }
+
+.fa-pen-clip {
+  color: #FFD700;
+}
+
+.fa-envelope-open-text {
+  color: #FFD700;
+}
