--- a/app/views/public/groups/_index.html.erb
+++ b/app/views/public/groups/_index.html.erb
@@ -2,22 +2,26 @@
   <thead>
     <tr>
       <th></th>
-      <th>コミュニティ名</th>
-      <th>参加中メンバー</th>
+      <th class="text-center">コミュニティ名</th>
+      <th class="text-center">参加中メンバー</th>
       <th></th>
-      <th colspan="3"></th>
+      <th></th>
+      <th colspan="5"></th>
     </tr>
   </thead>
   <tbody>
     <% groups.each do |group| %>
       <tr>
         <td><%= image_tag group.get_image(50, 50), class:"rounded-circle"; %></td>
-        <td><%= link_to group.name, group_path(group.id) %></td>
-        <td><%= group.group_users.count %></td>
+        <td class="text-center"><%= link_to group.name, group_path(group.id) %></td>
+        <td class="text-center"><%= group.group_users.count %>人</td>
         <td>
-        <% if group.owner_id == current_user.id %>
-          <%= link_to '編集', edit_group_path(group.id), class: 'btn btn-outline-success' %>
-        <% end %>
+            <%= link_to 'Show', group_path(group.id), class: 'btn btn-outline-warning' %>
+        </td>
+        <td>
+          <% if group.owner_id == current_user.id %>
+            <%= link_to '編集', edit_group_path(group.id), class: 'btn btn-outline-success' %>
+          <% end %>
         </td>
       </tr>
     <% end %>
