--- a/app/views/public/groups/new_mail.html.erb
+++ b/app/views/public/groups/new_mail.html.erb
@@ -1,20 +1,22 @@
 <div class='container'>
-  <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h2><%= @group.name %>メンバーへのメール</h2>
+  <div class="row no-gutters">
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
+    <h2 class="text-center text-dark bg-light p-4 mb-0">コミュニティ名:[<%= @group.name %>]<br>メンバーへのメール <i class="fa-solid fa-envelope-open-text"></i></h2>
+    <div class="form-body bg-light p-4">
     <%= form_with url: group_send_mail_path(@group), method: :get, local: true do |f| %>
       <div class="form-group">
-        <%= f.label :title, "タイトル" %>
-        <%= f.text_field :mail_title, class: 'form-control' %>
+         <i class="fas fa-building"></i><%= f.label :title, "メールタイトル" %> <i class="fa-solid fa-pen-clip"></i>
+        <%= f.text_field :mail_title, placeholder: "例): 読書会開催!", autofocus: true, class: 'form-control' %>
       </div>
       <div class="form-group">
-        <%= f.label :content, "メールタイトル" %>
-        <%= f.text_area :mail_content, class: 'form-control' %>
+        <%= f.label :content, "メール本文" %> <i class="fa-solid fa-pen-clip"></i>
+        <%= f.text_area :mail_content, placeholder: "例): 明日、朝7時に場所は〇〇で開催します!", class: 'form-control' %>
       </div>
       <div>
         <%= f.submit '送信' %>
       </div>
     <% end %>
+    </div>
     </div>
   </div>
 </div>
